--- a/.editorconfig
+++ b/.editorconfig
@@ -1,39 +1,39 @@
-# EditorConfig 配置文件
+# EditorConfig configuration file
 # https://editorconfig.org
 
 root = true
 
-# 所有文件使用 UTF-8 编码，换行符为 LF
+# All files use UTF-8 encoding, line ending is LF
 [*]
 charset = utf-8
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-# JavaScript/TypeScript 文件
+# JavaScript/TypeScript files
 [*.{js,ts,jsx,tsx,mjs,cjs}]
 indent_style = space
 indent_size = 2
 max_line_length = 100
 
-# JSON/YAML 文件
+# JSON/YAML files
 [*.{json,yml,yaml,toml}]
 indent_style = space
 indent_size = 2
 
-# Markdown 文件
+# Markdown files
 [*.md]
 indent_style = space
 indent_size = 2
 trim_trailing_whitespace = false
 max_line_length = off
 
-# Git 相关文件
+# Git related files
 [.git*]
 indent_style = space
 indent_size = 2
 
-# 配置文件
+# Configuration files
 [*.{rc,config}]
 indent_style = space
 indent_size = 2
