--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -13,6 +13,9 @@
   },
   "rules": {
     "eslint/func-style": "off",
-    "eslint/sort-imports": "off"
+    "eslint/sort-imports": "off",
+    "max-lines-per-function": "off",
+    "max-statements": "off",
+    "no-ternary": "off"
   }
 }
