--- a/package.json
+++ b/package.json
@@ -120,31 +120,41 @@
     "lint:fix": "oxlint --fix src",
     "format": "oxfmt src",
     "format:check": "oxfmt --check src",
-    "check": "bun run lint && bun run format:check"
+    "check": "bun run lint && bun run format:check",
+    "commit": "git-cz",
+    "release": "semantic-release"
   },
   "devDependencies": {
+    "@commitlint/cli": "^20.3.1",
+    "@commitlint/config-conventional": "^20.3.1",
     "@playwright/test": "^1.57.0",
+    "@reduxjs/toolkit": "^2.0.0",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/npm": "^13.1.3",
+    "@tanstack/react-query": "^5.0.0",
     "@types/bun": "latest",
     "@types/node": "^25.0.7",
     "@types/react": "^19.2.8",
+    "commitizen": "^4.3.1",
+    "cz-git": "^1.12.0",
     "electron": "^39.2.7",
+    "jotai": "^2.0.0",
     "lefthook": "^2.0.15",
     "oxfmt": "^0.24.0",
     "oxlint": "^1.39.0",
     "preact": "^10.25.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-redux": "^9.0.0",
+    "semantic-release": "^25.0.2",
     "solid-js": "^1.9.10",
     "svelte": "^5.46.3",
-    "zustand": "^4.5.0",
-    "@tanstack/react-query": "^5.0.0",
-    "jotai": "^2.0.0",
-    "@reduxjs/toolkit": "^2.0.0",
-    "react-redux": "^9.0.0",
     "tsdown": "^0.20.0-beta.1",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
-    "vue": "^3.5.26"
+    "vue": "^3.5.26",
+    "zustand": "^4.5.0"
   },
   "peerDependencies": {
     "electron": "^18.0.0",
